zope.testing Package Changelog
=============================

zope.testing version 2.0 (2006/01/05)
--------------------------------------

- Corresponds to the verison of the zope.testing package shipped as part of
  the Zope 3.2.0 release.
